docs(tests): PIT n'est pas cassé, c'est son lancement qui l'était
Invoquer le but seul (./mvnw -Pmutation org.pitest:...:mutationCoverage) n'exécute aucune
phase. Or l'argLine que PIT hérite de surefire contient deux valeurs posées par des
greffons liés à des phases : @{jacocoArgLine} (jacoco:prepare-agent) et
${net.bytebuddy:byte-buddy-agent:jar} (dependency:properties, phase initialize). Sans
phase, elles restent littérales, le minion reçoit un -javaagent qui n'existe pas, et
n'ayant pas démarré il ne rapporte que MINION_DIED.

Ce message ne dit pas la cause et ne varie pas avec la cible : il tombe pareil sur une
classe pure sans JavaFX ni SQLite. D'où la conclusion tentante, et fausse, que PIT serait
incompatible avec ce dépôt - conclusion que la mémoire du projet avait déjà consignée une
fois, pour un autre symptôme, avec la même leçon : un obstacle d'outillage est une
hypothèse à falsifier, pas une incompatibilité à décréter.

Vérifié dans les deux sens : avec test-compile, PIT tourne, en ligne comme hors ligne, sur
une classe pure comme sur une classe de vue TestFX.

Au passage, la doc prescrivait de repasser les quatre propriétés headless à la main via
-DjvmArgs : le profil les porte désormais lui-même, et la ligne de commande REMPLACE la
liste du profil au lieu de s'y ajouter. La consigne est inversée.

Refs #2554, #2605